added ehaviour sections added voltage and temp to the dash